--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">zNotName_#9750</h5><a class="link" href="#staff"></a> <a href="#staff"><img alt="" class="animated" src="img/album/2.jpg"></a>
+                     <h5 class="mb-0 opc-70 uppercase">zNotName_#9750</h5><a class="link" href="#staff">Dueño</a> <a href="#staff"><img alt="" class="animated" src="img/album/2.jpg"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
