--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">W 0 N G! 皇#2300</h5><a class="link" href="#staff"></a> <a href="#staff"><img alt="" class="animated" src="img/album/1.jpg"></a>
+                     <h5 class="mb-0 opc-70 uppercase">SrItyt#6899</h5><a class="link" href="#staff">Head-staff</a> <a href="#staff"><img alt="" class="animated" src="img/album/3.jpg"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
